--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=finalProject340
-main.class=finalproject340.patientDemographicsForm
+main.class=finalproject340.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
